@@ -2,6 +2,7 @@ Revision history for Database-Abstraction
 
 0.09
 	Added t/chi.t
+	selectall_hash: speed up slurp mode when 'entry' is one of the parameters
 
 0.08	Mon May 20 08:43:08 EDT 2024
 	Add unique as a synonym for distinct
